[package]
name = "aes-gui"
version = "1.0.1"
authors = ["Ethan Saenger <ethan@saenger5.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.5"
aes = "0.8.4"
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
pbkdf2 = "0.10"
base64 = "0.13"
dirs = "4.0"
hmac = "0.12"
generic-array = "0.14"

[build-dependencies]
slint-build = "1.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
getrandom = { version = "0.2.2", features = ["js"] }

[lib]
path = "src/main.rs"
crate-type = ["cdylib"]
